@@ -1,3 +1,9 @@
+2006-06-13	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in: Use --as-needed if supported by the linker.
+	* terminal/terminal-tab-header.c(terminal_tab_header_init): Use
+	  GtkLabel instead of ExoEllipsizedLabel.
+
 2006-05-29	Benedikt Meurer <benny@xfce.org>
 
 	* terminal/main.c(main): VTE is still too buggy to make warnings
